--- a/index.html
+++ b/index.html
@@ -1,65 +1,62 @@
 <!DOCTYPE html>
-<html lang="pl" ng-app="app">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8"/>
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Krzysztof Władyka">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Krzysztof Władyka">
     <title>Krzysztof Władyka</title>
+    <link rel="shortcut icon" href="https://www.gravatar.com/avatar/ce810750d0cfb4c1de5a298921388556?s=32" type="image/x-icon"/>
 
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="default.css">
-
-   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="default.css">
   </head>
+
   <body>
   <div class="container">
-    <div class="row text-center header">
-      <div class="col-lg-12" id="slogan">
-        Solve business needs using technology
-      </div>
-    </div>
-
-    <div class="row text-center header">
-      <div class="col-lg-12" id="profile">
-        Clojure developer
-      </div>
-    </div>
 
     <div class="row text-center">
-      <div class="col-lg-12" id="name">
+      <div class="col-12" id="name">
         Krzysztof Władyka
       </div>
     </div>
 
+    <div class="row text-center header">
+      <div class="col-12" id="slogan">
+        Satisfy business needs in the most efficient way using technology
+        <!-- Solve business needs using technology -->
+      </div>
+    </div>
+
+    <div class="row text-center align-items-center">
+      <div class="col-md-6">
+        <a id="cto" href="https://cto.wladyka.eu/">CTO<span> blog</span></a>
+      </div>
+
+      <div class="col-md-6">
+        <a id="clojure" href="http://clojure.wladyka.eu/"><img src="clojure.png" title="Clojure blog"></a>
+      </div>
+    </div>
+  
     <div class="row text-center">
-      <div class="col-xs-6 lfont">
+      <div class="col-md-6 lfont">
         <a id="github" href="https://github.com/kwladyka"><i class="fa fa-github"></i></a>
       </div>
 
-      <div class="col-xs-6 text-center">
-        <a id="clojure" href="http://clojure.wladyka.eu/"><img src="clojure.png"></a>
-      </div>
-    </div>
-    
-    <div class="row text-center">
-      <div class="col-xs-6 lfont">
-        <a href="https://www.facebook.com/kwladyka"><i class="fa fa-facebook-square"></i></a>
-      </div>
-
-      <div class="col-xs-6 lfont">
+      <div class="col-md-6 lfont">
         <a href="https://pl.linkedin.com/in/kwladyka"><i class="fa fa-linkedin-square"></i></a>
       </div>
-
     </div>
-  </div>
 
-    <script src="jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <div class="row text-center">
+      <div class="col-md-6 lfont">
+        <a href="https://www.facebook.com/kwladyka"><i class="fa fa-facebook-square"></i></a>
+      </div>
+    </div>
+
+  </div>
   </body>
-  </html>
+</html>
