--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Krzysztof Władyka</title>
     <link rel="shortcut icon" href="https://www.gravatar.com/avatar/ce810750d0cfb4c1de5a298921388556?s=32" type="image/x-icon"/>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="default.css">
   </head>
@@ -26,21 +26,38 @@
 
     <div class="row text-center header">
       <div class="col-12" id="slogan">
-        Satisfy business needs in the most efficient way using technology
-        <!-- Solve business needs using technology -->
+        Satisfy business needs in the simplest way using technology
       </div>
     </div>
 
-    <div class="row text-center align-items-center">
-      <div class="col-md-6">
-        <a id="cto" href="https://cto.wladyka.eu/">CTO<span> blog</span></a>
-      </div>
-
-      <div class="col-md-6">
-        <a id="clojure" href="http://clojure.wladyka.eu/"><img src="clojure.png" title="Clojure blog"></a>
+    <div class=row>
+      <div class="col-12">
+        <h3>Blogs</h3>
       </div>
     </div>
   
+    <div class="row text-center align-items-center">
+      <div class="col-md-6">
+        <div class="mx-auto position-relative" style="width: 18rem;">
+          <a class="stretched-link" id="cto" href="https://cto.wladyka.eu/">CTO<span> blog</span></a>
+          <p>Share my techonolgical experience</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 position-relative">
+        <div class="mx-auto mt-5 mt-md-3" style="width: 18rem;">
+          <a class="stretched-link" id="clojure" href="http://clojure.wladyka.eu/"><img src="clojure.png" title="Clojure blog"></a>
+          <p>Programming language of my choice</p>
+        </div>
+      </div>
+    </div>
+
+    <div class=row>
+      <div class="col-12">
+        <h3>Profiles</h3>
+      </div>
+    </div>
+
     <div class="row text-center">
       <div class="col-md-6 lfont">
         <a id="github" href="https://github.com/kwladyka"><i class="fa fa-github"></i></a>
